Closed Bug 618358 Opened 14 years ago Closed 14 years ago

Printing AS stack traces is broken as a result of PrintWriter refactoring.

Categories

(Tamarin Graveyard :: Debugger, defect)

defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: kpalacz, Assigned: kpalacz)

Details

Attachments

(1 file)

      No description provided.
Attached patch fixSplinter Review
Assignee: nobody → kpalacz
Attachment #496846 - Flags: superreview?
Attachment #496846 - Flags: review?(rreitmai)
Attachment #496846 - Flags: superreview? → superreview?(edwsmith)
Attachment #496846 - Flags: superreview?(edwsmith) → superreview+
Attachment #496846 - Flags: review?(rreitmai) → review+
changeset: 5669:e27caeb5c46e
user:      kpalacz@adobe.com
summary:   Bug 618358 - Printing AS stack traces is broken as a result of PrintWriter refactoring (r+rreitmai,sr+edwsmith)

http://hg.mozilla.org/tamarin-redux/rev/e27caeb5c46e
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: