Bug 618358 - Printing AS stack traces is broken as a result of PrintWriter refactoring (r+rreitmai,sr+edwsmith)